[package]
name = "mh-events2pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
xmltree = "0.10.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
chrono = { version = "0.4.19", features = ["serde"] }