[package]
name = "mh-events2pulsar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
xmltree = "0.10.3"
quick-xml = { version = "0.22", features = [ "serialize" ] }
chrono = { version = "0.4.19", features = ["serde"] }
pulsar = "4.1.1"
envy = "0.4.2"
env_logger = "0.9.0"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.81"

[patch.crates-io]
pulsar = { git = 'https://github.com/RemiKalbe/pulsar-rs' }