[package]
name = "mh-events2pulsar"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
xmltree = "0.10"
quick-xml = { version = "0.31", features = [ "serialize" ] }
chrono = { version = "0.4", features = ["serde"] }
pulsar = "6"
envy = "0.4"
env_logger = "0.9"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1"
